--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Time Checker</title>
 </head>
-<body>
+<body onload="call_sms()">
   <h1 id="message">Waiting...</h1>
   <script src="script.js"></script>
 </body>
 </html>
+
