--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Time Checker</title>
-  <script src="script.js"></script>
 </head>
-<body onload="call_sms()">
+<body onload="call_sms();">
   <h1 id="message">Waiting...</h1>
+  <script src="script.js"></script>
 </body>
 </html>
+
 
 
