--- a/alarm.html
+++ b/alarm.html
@@ -7,9 +7,10 @@
 </head>
 <body onload="call_sms();">
   <h1 id="message">Waiting...</h1>
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
+
 
 
 
